--- a/src/public/css/mangaList.css
+++ b/src/public/css/mangaList.css
@@ -125,13 +125,13 @@ h1 {
   text-decoration: underline;
 }
 
-.charactor-list-container {
+.character-list-container {
   display: flex;
   flex-wrap: wrap;
   gap: 10px;
 }
 
-.charactor-item {
+.character-item {
   background-color: #f0f0f0;
   color: #333;
   padding: 8px 16px;
@@ -140,7 +140,7 @@ h1 {
   cursor: pointer;
 }
 
-.charactor-item:hover{
+.character-item:hover{
   background-color: #e9e9e9;
 }
 
