cssとtsへのリンクをastroに合わせて変更

--- a/client/src/pages/index.astro
+++ b/client/src/pages/index.astro
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ja">
   <head>
     <meta charset="UTF-8" />
@@ -55,10 +55,10 @@
     <div class="container">
       <h1>コミックビューアー</h1>
       <div class="nav-links">
-        <a href="pages/mangaList/mangaList.html">マンガ一覧</a>
-        <a href="pages/tagList/tagList.html">タグ一覧</a>
-        <a href="pages/upload/upload.html">アップロード</a>
-        <a href="pages/settings/settings.html">設定</a>
+        <a href="/mangaList">マンガ一覧</a>
+        <a href="/tagList">タグ一覧</a>
+        <a href="/upload">アップロード</a>
+        <a href="/settings">設定</a>
       </div>
       <div class="description">
         <p>ローカルでマンガを閲覧できるWebアプリケーションです。</p>
@@ -66,4 +66,5 @@
       </div>
     </div>
   </body>
-</html> 
+</html>
+
