css のリンクにis:globalが抜けていたので修正

--- a/client/src/pages/mangaList.astro
+++ b/client/src/pages/mangaList.astro
@@ -45,7 +45,7 @@
     <script>
       import "../scripts/mangaList";
     </script>
-    <style>
+    <style is:global>
       @import "../styles/mangaList.css";
     </style>
   </body>
