--- a/client/src/pages/tagList.astro
+++ b/client/src/pages/tagList.astro
@@ -33,7 +33,7 @@
     <script>
       import "../scripts/tagList";
     </script>
-    <style>
+    <style is:global>
       @import "../styles/tagList.css";
     </style>
   </body>
