--- a/client/src/pages/settings.astro
+++ b/client/src/pages/settings.astro
@@ -86,7 +86,7 @@
     <script>
       import "../scripts/settings";
     </script>
-    <style>
+    <style is:global>
       @import "../styles/settings.css";
     </style>
   </body>
