--- a/client/src/pages/upload.astro
+++ b/client/src/pages/upload.astro
@@ -114,7 +114,7 @@
     <script>
       import "../scripts/upload";
     </script>
-    <style>
+    <style is:global>
       @import "../styles/upload.css";
     </style>
   </body>
