--- a/client/src/pages/upload.astro
+++ b/client/src/pages/upload.astro
@@ -2,7 +2,7 @@
 import MainLayout from "../layouts/mainLayout.astro";
 ---
 
-<MainLayout title="タグ一覧">
+<MainLayout title="アップロード">
   <main class="upload-content">
     <form id="upload-form" method="post" enctype="multipart/form-data">
       <section class="upload-section">
