ヘッダーのデザインを修正

--- a/client/src/pages/settings.astro
+++ b/client/src/pages/settings.astro
@@ -1,5 +1,5 @@
 ---
-import MainLayout from "../layouts/mainLayout.astro";
+import MainLayout from "../layouts/MainLayout.astro";
 ---
 
 <MainLayout title="設定">
