--- a/client/src/styles/mainLayout.css
+++ b/client/src/styles/mainLayout.css
@@ -22,6 +22,12 @@ body {
   justify-content: space-between;
   align-items: center;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  position: sticky;
+}
+
+#global-header-left {
+  display: flex;
+  align-items: center;
 }
 
 .header-logo a {
@@ -29,6 +35,7 @@ body {
   font-weight: bold;
   color: white;
   text-decoration: none;
+  padding: 15px 20px 15px 0px;
 }
 /* ナビゲーションのリスト化 */
 nav ul {
