--- a/client/src/layouts/mainLayout.astro
+++ b/client/src/layouts/mainLayout.astro
@@ -12,21 +12,28 @@ const { title } = Astro.props;
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>{title} | コミックビューアー</title>
-    <link rel="stylesheet" href="/global.css" />
   </head>
   <body>
     <header id="global-header">
-      <div class="header-logo">
-        <a href="/">📚 Comic Viewer</a>
+      <div id="global-header-left">
+        <div class="header-logo">
+          <a href="/">📚 Comic Viewer</a>
+        </div>
+        <nav>
+          <ul>
+            <li><a href="/mangaList">マンガ一覧</a></li>
+            <li><a href="/tagList">タグ一覧</a></li>
+          </ul>
+        </nav>
       </div>
-      <nav>
-        <ul>
-        <li><a href="/mangaList">マンガ一覧</a></li>
-        <li><a href="/tagList">タグ一覧</a></li>
-        <li><a href="/upload">アップロード</a></li>
-        <li><a href="/settings">設定</a></li>
-        </ul>
-      </nav>
+      <div id="global-header-right">
+        <nav>
+          <ul>
+            <li><a href="/upload">アップロード</a></li>
+            <li><a href="/settings">設定</a></li>
+          </ul>
+        </nav>
+      </div>
     </header>
 
     <main>
@@ -38,4 +45,3 @@ const { title } = Astro.props;
     </style>
   </body>
 </html>
-
