--- a/client/src/layouts/mainLayout.astro
+++ b/client/src/layouts/mainLayout.astro
@@ -12,6 +12,7 @@ const { title } = Astro.props;
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>{title} | コミックビューアー</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
   </head>
   <body>
     <header id="global-header">
@@ -21,16 +22,16 @@ const { title } = Astro.props;
         </div>
         <nav>
           <ul>
-            <li><a href="/mangaList">マンガ一覧</a></li>
-            <li><a href="/tagList">タグ一覧</a></li>
+            <li><a href="/mangaList"><span class="material-symbols-rounded">shelves</span>マンガ</a></li>
+            <li><a href="/tagList"><span class="material-symbols-rounded">label</span>タグ</a></li>
           </ul>
         </nav>
       </div>
       <div id="global-header-right">
         <nav>
           <ul>
-            <li><a href="/upload">アップロード</a></li>
-            <li><a href="/settings">設定</a></li>
+            <li><a href="/upload"><span class="material-symbols-rounded">upload</span>アップロード</a></li>
+            <li><a href="/settings"><span class="material-symbols-rounded">settings</span>設定</a></li>
           </ul>
         </nav>
       </div>
