--- a/client/src/styles/mainLayout.css
+++ b/client/src/styles/mainLayout.css
@@ -52,7 +52,8 @@ nav a {
   text-decoration: none;
   font-size: 16px;
   padding: 20px 15px; /* クリック領域を広くする */
-  display: block;
+  display: flex;
+  align-items: center;
   transition:
     background-color 0.3s,
     color 0.3s;
@@ -62,6 +63,18 @@ nav a {
 nav a:hover {
   background-color: #34495e;
   color: #3498db;
+}
+
+/* アイコンの設定 */
+.material-symbols-rounded {
+  font-variation-settings:
+    'FILL' 0,
+    'wght' 400,
+    'GRAD' 0,
+    'opsz' 24;
+  vertical-align: middle;
+  margin-right: 4px;
+  font-size: 24px;
 }
 
 main {
