ペジネーションのコードをastroに合わせて変更

--- a/client/src/pages/mangaList.astro
+++ b/client/src/pages/mangaList.astro
@@ -3,21 +3,56 @@ import qs from "qs";
 import MainLayout from "../layouts/MainLayout.astro";
 import MangaCard from "../components/MangaCard.astro";
 import { getMangaQueryFromURLParam } from "../lib/manga";
-import {safeFetchWithSchema} from "../lib/fetcher"
-import { API_ENDPOINTS, MetadataListSchema,MetadataList} from "@comic-viewer/shared";
+import { safeFetchWithSchema } from "../lib/fetcher";
+import { API_ENDPOINTS, MetadataListSchema, MetadataList } from "@comic-viewer/shared";
 
 const mangaQuery = getMangaQueryFromURLParam(Astro.url.searchParams);
 const endpointWithQuery = `${API_ENDPOINTS.manga.list}?${qs.stringify(mangaQuery)}`;
-const {pageConf,total, data} = await safeFetchWithSchema<MetadataList>(endpointWithQuery,MetadataListSchema);
+const { pageConf, total, data } = await safeFetchWithSchema<MetadataList>(endpointWithQuery, MetadataListSchema);
+
+const totalPages = Math.ceil(total / pageConf.limit);
+const pagenationLimit = 9;
+const pagenationSide = (pagenationLimit - 1) / 2;
+const currentPage = pageConf.page;
+
+const pageLength = Math.min(pagenationLimit, totalPages);
+let startpage = currentPage - pagenationSide;
+if (startpage < 1) {
+  startpage = 1;
+}
+if (startpage + pagenationLimit - 1 > totalPages) {
+  startpage = Math.max(1, totalPages - pageLength + 1);
+}
+
+const pages = Array.from({ length: pageLength }, (_, i) => i + startpage);
 ---
 
 <MainLayout title="漫画一覧">
   <div id="manga-list-container">
-    {data.map((dataItem) => {
-      <MangaCard manga={dataItem}></MangaCard>
-    })}
+    {
+      data.map((dataItem) => {
+        <MangaCard manga={dataItem} />;
+      })
+    }
   </div>
-  <div class="pagination" id="pagination"></div>
+  <div class="pagination" id="pagination">
+    {
+      pages.map((page) => {
+        const urlParams = Astro.url.searchParams;
+        urlParams.set("page", page.toString());
+        const href = `?${urlParams.toString()}`;
+        return (
+          <a
+            href={href}
+            class={`pagenation-button ${page === currentPage ? "active" : ""}`}
+            aria-current={page === currentPage ? "page" : undefined}
+          >
+            {page}
+          </a>
+        );
+      })
+    }
+  </div>
 
   <footer class="mangalist-footer">
     <div class="footer-info">
