--- a/client/src/pages/mangaList.astro
+++ b/client/src/pages/mangaList.astro
@@ -4,11 +4,11 @@ import MainLayout from "../layouts/MainLayout.astro";
 import MangaCard from "../components/MangaCard.astro";
 import { getMangaQueryFromURLParam } from "../lib/manga";
 import { safeFetchWithSchema } from "../lib/fetcher";
-import { API_ENDPOINTS, MetadataListSchema, MetadataList } from "@comic-viewer/shared";
+import { API_ENDPOINTS, MetadataResponseSchema } from "@comic-viewer/shared";
 
 const mangaQuery = getMangaQueryFromURLParam(Astro.url.searchParams);
-const endpointWithQuery = `${API_ENDPOINTS.manga.list}?${qs.stringify(mangaQuery)}`;
-const { pageConf, total, data } = await safeFetchWithSchema<MetadataList>(endpointWithQuery, MetadataListSchema);
+const endpointWithQuery = `${import.meta.env.PUBLIC_API_URL}${API_ENDPOINTS.manga.list}?${qs.stringify(mangaQuery)}`;
+const { pageConf, total, data } = await safeFetchWithSchema(endpointWithQuery, MetadataResponseSchema);
 
 const totalPages = Math.ceil(total / pageConf.limit);
 const pagenationLimit = 9;
@@ -31,7 +31,7 @@ const pages = Array.from({ length: pageLength }, (_, i) => i + startpage);
   <div id="manga-list-container">
     {
       data.map((dataItem) => {
-        <MangaCard manga={dataItem} />;
+        return <MangaCard manga={dataItem} />;
       })
     }
   </div>
@@ -44,7 +44,7 @@ const pages = Array.from({ length: pageLength }, (_, i) => i + startpage);
         return (
           <a
             href={href}
-            class={`pagenation-button ${page === currentPage ? "active" : ""}`}
+            class={`pagination-button ${page === currentPage ? "active" : ""}`}
             aria-current={page === currentPage ? "page" : undefined}
           >
             {page}
