--- a/client/src/components/SearchBox.astro
+++ b/client/src/components/SearchBox.astro
@@ -2,8 +2,8 @@
   const params = Astro.url.searchParams;
 ---
 <search>
-  <form class="search-box">
-    <input type="search" placeholder="検索" id="search-input"/>
+  <form class="search-box" action="/mangaList" method="get">
+    <input type="search" placeholder="検索" name="q" id="search-input"/>
     <button type="submit" id="search-box-button"><span class="material-symbols-rounded">search</span></button>
   </form>
 </search>
